--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
@@ -53,7 +53,7 @@ msgstr "Cos de l'acta"
 
 #: ./genweb/organs/content/manualimport.py:31
 msgid "Add content separated by -- and they will by added as Agreements."
-msgstr "Des d'aquí es poden afegir punts i el corresponent número de punt a la sessió. <br/>Cal escriure només un punt per linia i separant el número i el títol amb 2 guions. Exemple: <br/>    1 -- Informe del rector<br/>    2 -- Informació dels nomenaments<br/>    3 -- Aprovació d’una declaració"
+msgstr "Es crearan els punts i subpunts sense necessitat d'afegir el número de punt.<br/>Cal escriure només un punt o subpunt per linia. Si hi ha espais al principi de linia es crea com a subpunt. Per exemple: <br/>Informe del rector<br/>  Informació dels nomenaments<br/>  Aprovació d’una declaració<br/>Discutir tema central<br/>Conclusions"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:328
 msgid "Afegir <span class=\"caret\"></span>"
@@ -341,7 +341,7 @@ msgstr "Adreces de correu separades per comes."
 
 #: ./genweb/organs/content/manualimport.py:30
 msgid "Manual Import"
-msgstr "Importació de punts manual"
+msgstr "Importació automàtica de punts i subpunts"
 
 #: ./genweb/organs/content/manualimport.py:106
 msgid "Massive agreements imported"
