--- a/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
+++ b/genweb/organs/locales/ca/LC_MESSAGES/genweb.organs.po
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2017-01-30 14:02+0000\n"
+"POT-Creation-Date: 2017-01-31 12:40+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI +ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -353,6 +353,10 @@ msgstr "Persones convocades"
 #: ./genweb/organs/content/sessio.py:88
 msgid "Incoming members list help"
 msgstr "Llista de noms de les persones que seran composades. Inicialment són els membres que composen l'òrgan."
+
+#: ./genweb/organs/browser/viewlets_templates/header.pt:37
+msgid "Info_del_Servei"
+msgstr "Consultar informació a Serveis TIC"
 
 #: ./genweb/organs/content/templates/sessio_view.pt:148
 msgid "Informar"
